Implemented consumption in pv statistics