@@ -5,6 +5,7 @@ import jakarta.inject.Inject;
 import org.tobkir.logic.persistence.ModbusValueDAO;
 import org.tobkir.model.BatteryState;
 import org.tobkir.model.ModbusValueEntity;
+import org.tobkir.model.PvConsumptionState;
 import org.tobkir.model.PvPowerState;
 
 import java.time.Duration;
@@ -37,16 +38,20 @@ public class ModbusValueService {
     public List<BatteryState> getAllBatteryChargingStates(ZonedDateTime start, ZonedDateTime end) {
         List<BatteryState> batteryStates = modbusValueDAO.findAllBatteryChargingStates(start, end);
 
-        return new ArrayList<>(batteryStates.stream()
-                .collect(Collectors.toMap(
-                        BatteryState::getBatteryChargingState, // Verwende den Ladezustand als Schlüssel
-                        state -> state, // Verwende das gesamte BatteryState-Objekt als Wert
-                        (existing, replacement) -> existing // Bei Konflikten (gleicher Ladezustand) den ersten Wert behalten
-                ))
-                .values())
-                .stream()
-                .sorted(Comparator.comparing(BatteryState::getTimestamp)) // Nach Timestamp sortieren
-                .collect(Collectors.toList());
+        batteryStates = batteryStates.stream()
+                .sorted(Comparator.comparing(BatteryState::getTimestamp))
+                .toList();
+
+        List<BatteryState> filteredStates = new ArrayList<>();
+        ZonedDateTime lastTimestamp = null;
+
+        for (BatteryState state : batteryStates) {
+            if (lastTimestamp == null || Duration.between(lastTimestamp, state.getTimestamp()).toMinutes() >= 2) {
+                filteredStates.add(state);
+                lastTimestamp = state.getTimestamp();
+            }
+        }
+        return filteredStates;
     }
 
     public List<Float> getAllConsumptionFromBattery() {
@@ -57,8 +62,23 @@ public class ModbusValueService {
         return modbusValueDAO.findAllConsumptionFromGrid();
     }
 
-    public List<Float> getAllConsumptionFromPV() {
-        return modbusValueDAO.findAllConsumptionFromPV();
+    public List<PvConsumptionState> getAllConsumptionFromPV(ZonedDateTime start, ZonedDateTime end) {
+        List<PvConsumptionState> pvPowerStates = modbusValueDAO.findAllConsumptionFromPV(start, end);
+        pvPowerStates = pvPowerStates.stream()
+                .sorted(Comparator.comparing(PvConsumptionState::getTimestamp))
+                .toList();
+
+        List<PvConsumptionState> filteredStates = new ArrayList<>();
+        ZonedDateTime lastTimestamp = null;
+
+        for (PvConsumptionState state : pvPowerStates) {
+            if (lastTimestamp == null || Duration.between(lastTimestamp, state.getTimestamp()).toMinutes() >= 2) {
+                filteredStates.add(state);
+                lastTimestamp = state.getTimestamp();
+            }
+        }
+
+        return filteredStates;
     }
 
     public List<PvPowerState> getAllActualPVPower(ZonedDateTime start, ZonedDateTime end) {
@@ -66,7 +86,7 @@ public class ModbusValueService {
 
         pvPowerStates = pvPowerStates.stream()
                 .sorted(Comparator.comparing(PvPowerState::getTimestamp))
-                .collect(Collectors.toList());
+                .toList();
 
         List<PvPowerState> filteredStates = new ArrayList<>();
         ZonedDateTime lastTimestamp = null;
@@ -77,8 +97,6 @@ public class ModbusValueService {
                 lastTimestamp = state.getTimestamp();
             }
         }
-
-
         return filteredStates;
     }
 
